--- a/templates/admin_mail.twig
+++ b/templates/admin_mail.twig
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-{% include "flash_messages.twig" %}
+{% include "flash_messages_admin.twig" %}
 
 <p>{{page.glob.l10n.admin_mail_legend}}</p>
 <form action="{{page.rot}}/admin/mail/" method="put" id="mailform">
