--- a/templates/admin_users.twig
+++ b/templates/admin_users.twig
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-    {% include "flash_messages.twig" %}
+    {% include "flash_messages_admin.twig" %}
 
     <h2>{{ page.glob.l10n.admin_users_legend1 }}</h2>
     <form action="{{ page.rot }}/admin/users/" method="post" id="newuserform">
