--- a/templates/global_search_result.twig
+++ b/templates/global_search_result.twig
@@ -4,6 +4,7 @@
 {% endblock %}
 
 {% block content %}
+	{% include "flash_messages.twig" %}
 	{% include "search_form.twig" %}
 	<section>
 		<div class="collapsible" x-data="{ open: false }">
