--- a/templates/header.twig
+++ b/templates/header.twig
@@ -1,4 +1,4 @@
-<header class="flex items-center justify-between bg-manatee-200">
+<header class="flex items-center justify-between bg-hbgl dark:bg-hbgd">
     <h1 class="px-2 text-left hidden md:visible">
         {{ page.h1 }}
     </h1>
