--- a/templates/layout-default.twig
+++ b/templates/layout-default.twig
@@ -1,7 +1,7 @@
 {% extends "layout.twig" %}
 {% block header %}
     {% include "header.twig" %}
-    <nav class="bg-manatee-200 py-1">
+    <nav class="bg-hbgl dark:bg-hbgd py-1">
         {% include "navbar_top.twig" %}
         {% block navbar %}{% endblock %}
     </nav>
