--- a/templates/login.twig
+++ b/templates/login.twig
@@ -6,6 +6,7 @@
     <h2 class="text-2xl flex items-center justify-center py-4 px-4 sm:px-6 lg:px-8">{{page.glob.l10n.login}}</h2>
     <div class="flex items-center justify-center py-12 px-4 sm:px-6 lg:px-8">
         <div class="max-w-md w-full space-y-8">
+            {% include "flash_messages.twig" %}
             <form action="{{page.rot}}/login/" method="post" class="mt-8 space-y-6">
                 <div class="rounded-md shadow-sm -space-y-px">
                     <fieldset>
@@ -20,7 +21,7 @@
                 <div>
                     <button type="submit" name="login" class="group relative w-full flex justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white bg-steel-600 hover:bg-steel-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-steel-500">
                       <span class="absolute left-0 inset-y-0 flex items-center pl-3" aria-hidden="true">
-                        <!-- Heroicon name: lock-closed -->
+                        {# Heroicon name: lock-closed #}
                         <svg class="h-5 w-5 text-steel-500 group-hover:text-steel-400" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
                           <path fill-rule="evenodd" d="M5 9V7a5 5 0 0110 0v2a2 2 0 012 2v5a2 2 0 01-2 2H5a2 2 0 01-2-2v-5a2 2 0 012-2zm8-2v2H7V7a3 3 0 016 0z" clip-rule="evenodd" />
                         </svg>
