--- a/templates/series.twig
+++ b/templates/series.twig
@@ -10,5 +10,6 @@
 {% endblock %}
 
 {% block content %}
+	{% include "flash_messages.twig" %}
 	{% include "series_listview.twig" %}
 {% endblock %}
