--- a/templates/tag_detail.twig
+++ b/templates/tag_detail.twig
@@ -6,6 +6,7 @@
 {% endblock %}
 
 {% block content %}
+	{% include "flash_messages.twig" %}
 <section class="tag_detail row">
 	<header>
 		{% if curpage == 0 %}
