--- a/templates/admin_configuration.twig
+++ b/templates/admin_configuration.twig
@@ -1,7 +1,7 @@
 {% extends 'layout-default.twig' %}
 {% block content %}
 
-{% include "flash_messages.twig" %}
+{% include "flash_messages_admin.twig" %}
 <form action="{{page.rot}}/admin/configuration/" method="post" id="adminform">
 	<fieldset class="config-fieldset">
 		<label for="calibre_dir">{{page.glob.l10n.calibre_dir1}}</label>
