--- a/templates/admin_idtemplates.twig
+++ b/templates/admin_idtemplates.twig
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-{% include "flash_messages.twig" %}
+{% include "flash_messages_admin.twig" %}
 
 <p>{{page.glob.l10n.admin_idtemplates_legend|raw}}</p>
 <ul id="idtemplates" class="w-full">
