--- a/templates/admin_user.twig
+++ b/templates/admin_user.twig
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-{% include "flash_messages.twig" %}
+{% include "flash_messages_admin.twig" %}
 
 <p>{{page.glob.l10n.admin_users_legend2}}</p>
 <form action="{{page.rot}}/admin/users/{{user.id}}" method="put" id="userform">
