--- a/templates/authors.twig
+++ b/templates/authors.twig
@@ -10,6 +10,7 @@
 {% endblock %}
 
 {% block content %}
+    {% include "flash_messages.twig" %}
     {% include "authors_listview.twig" %}
 {% endblock %}
 
