--- a/templates/tags.twig
+++ b/templates/tags.twig
@@ -10,5 +10,6 @@
 {% endblock %}
 
 {% block content %}
+    {% include "flash_messages.twig" %}
     {% include "tags_listview.twig" %}
 {% endblock %}
