--- a/templates/titles.twig
+++ b/templates/titles.twig
@@ -10,5 +10,6 @@
 {% endblock %}
 
 {% block content %}
+	{% include "flash_messages.twig" %}
 	{% include "titles_listview.twig" %}
 {% endblock %}
